developing the chat services